cabal-version:       2.2
name:                hslua
version:             2.4.0
synopsis:            Bindings to Lua, an embeddable scripting language
description:         HsLua provides wrappers and helpers
                     to bridge Haskell and <https://www.lua.org/ Lua>.
                     .
                     It builds upon the /lua/ package, which allows to bundle
                     a Lua interpreter with a Haskell program.
                     .
                     Example programs can be found in the @hslua-examples@
                     subdir of the project
                     <https://github.com/hslua/hslua repository>.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel, Gracjan Polak, Ömer Sinan Ağacan
maintainer:          tarleb@hslua.org
copyright:           © 2007–2012 Gracjan Polak;
                     © 2012–2016 Ömer Sinan Ağacan;
                     © 2017-2024 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , test/lua/*.lua
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git

Flag executable
  description:         Compile `hslua` standalone executable.
  default:             False

common common-options
  default-language:    Haskell2010
  build-depends:       base                     >= 4.11  && < 5
  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  exposed-modules:     HsLua
                     , HsLua.Util
  reexported-modules:  HsLua.Aeson
                     , HsLua.Core
                     , HsLua.Core.Error
                     , HsLua.Core.Types
                     , HsLua.Core.Utf8
                     , HsLua.Class.Exposable
                     , HsLua.Class.Invokable
                     , HsLua.Class.Peekable
                     , HsLua.Class.Pushable
                     , HsLua.Class.Util
                     , HsLua.Marshalling
                     , HsLua.ObjectOrientation
                     , HsLua.Packaging
                     , HsLua.Packaging.Function
                     , HsLua.Packaging.Module
                     , HsLua.Packaging.Rendering
                     , HsLua.Typing
  hs-source-dirs:      src
  build-depends:       hslua-aeson              >= 2.3.1  && < 2.4
                     , hslua-classes            >= 2.2.1  && < 2.4
                     , hslua-core               >= 2.3.2  && < 2.4
                     , hslua-marshalling        >= 2.3.1  && < 2.4
                     , hslua-objectorientation  >= 2.4    && < 2.5
                     , hslua-packaging          >= 2.3.1  && < 2.4
                     , hslua-typing             >= 0.1.1  && < 0.2

test-suite test-hslua
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -Wno-unused-do-bind
  other-modules:       HsLuaTests
                     , HsLua.UtilTests
  build-depends:       hslua
                     , bytestring               >= 0.10.2 && < 0.13
                     , exceptions               >= 0.8    && < 0.11
                     , hslua-core               >= 2.3.2  && < 2.4
                     , tasty-hslua
                     , tasty                    >= 0.11
                     , tasty-hunit              >= 0.9
                     , text                     >= 1.2    && < 2.2
  other-extensions:    LambdaCase
                     , OverloadedStrings
                     , TypeApplications

executable hslua
  import:              common-options
  hs-source-dirs:      app
  main-is:             hslua.hs
  ghc-options:         -rtsopts -with-rtsopts=-A8m -threaded
  if flag(executable)
    buildable:           True
    build-depends:       hslua-cli
                       , hslua-core
                       , hslua-packaging
                       , hslua-module-path
                       , hslua-module-system
                       , hslua-module-text
                       , hslua-module-version
                       , hslua-module-zip
  else
   buildable:            False
