cabal-version:       2.2
name:                lpeg
version:             1.1.0
synopsis:            LPeg – Parsing Expression Grammars For Lua
description:         This package contains the C sources of LPeg, as well
                     as some tiny Haskell helper to load the package.
                     .
                     <http://www.inf.puc-rio.br/~roberto/lpeg/>
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          Albert Krewinkel <tarleb@hslua.org>
copyright:           © 2007-2019 Lua.org, PUC-Rio;
                     © 2021-2024 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  cbits/lpeg-1.1.0/*.h
                   , cbits/re.h
                   , README.md
                   , CHANGELOG.md
tested-with:         GHC == 9.6
                   , GHC == 9.8
                   , GHC == 9.10
                   , GHC == 9.12

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git
  subdir:              lpeg

flag rely-on-shared-lpeg-library
  default:             False
  manual:              True
  description:         Do not build lpeg from source, but trust that lpeg is
                       made available in other ways, e.g., through a
                       system-wide installation. The loader will be replaced
                       with a placeholder function that only emits a message.

common common-options
  default-language:    Haskell2010
  build-depends:       base                 >= 4.11   && < 5
                     , lua                  >= 2.1    && < 2.4

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  exposed-modules:     Lua.LPeg
  default-extensions:  ForeignFunctionInterface

  if flag(rely-on-shared-lpeg-library)
    hs-source-dirs:      substitute
    c-sources:           cbits/placeholder.c
    cpp-options:         -DRELY_ON_SYSTEM_INSTALL
  else
    hs-source-dirs:      src
    include-dirs:        cbits/lpeg-1.1.0
                       , cbits
    c-sources:           cbits/lpeg-1.1.0/lpvm.c
                       , cbits/lpeg-1.1.0/lpcap.c
                       , cbits/lpeg-1.1.0/lptree.c
                       , cbits/lpeg-1.1.0/lpcode.c
                       , cbits/lpeg-1.1.0/lpprint.c
                       , cbits/lpeg-1.1.0/lpcset.c
                       , cbits/re.c
    cc-options:          -std=c99 -fPIC

test-suite test-lpeg
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-lpeg.hs
  hs-source-dirs:      test
  build-depends:       lpeg
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
  other-extensions:    CPP
  if flag(rely-on-shared-lpeg-library)
    cpp-options:         -DRELY_ON_SYSTEM_INSTALL
