cabal-version:       2.2
name:                tasty-hslua
version:             1.0.1
synopsis:            Tasty helpers to test HsLua.
description:         Various tasty helpers and utilities to test HsLua
                     oparations. Built on top of tasty-hunit.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2017-2022 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.1
                   , GHC == 9.2.1

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git

common common-options
  default-language:    Haskell2010
  build-depends:       base          >= 4.8    && < 5
                     , hslua-core    >= 2.0    && < 2.2
                     , bytestring    >= 0.10.2 && < 0.12
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:         -Wcpp-undef
                         -Werror=missing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:         -Widentities
                         -Wincomplete-uni-patterns
                         -Wpartial-fields
                         -fhide-source-paths

library
  import:              common-options
  exposed-modules:     Test.Tasty.HsLua
  hs-source-dirs:      src
  default-extensions:  LambdaCase
  other-extensions:    OverloadedStrings
  build-depends:       tasty                >= 0.11
                     , tasty-hunit          >= 0.9
